item alignment fix

--- a/styles.css
+++ b/styles.css
@@ -321,6 +321,7 @@ body {
     #container {
         display: flex;
         flex-direction: column;
+        align-items: center;
     }
 
     .rounded-card {
